# volgar

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh  setup.py  test.cc  todo  todo.md
docs/: docs.md
falcon/: CMakeLists.txt  common.h  falcon.h  utils.h
falcon/autograd/: CMakeLists.txt  Functional.cc  Functional.h  README  Tensor.cc  Tensor.h  autograd.h
falcon/autograd/operators/: Add.cc  Add.h  Div.cc  Div.h  Matmul.cc  Matmul.h  Mul.cc  Mul.h  Sub.cc  Sub.h  operators.h
falcon/fprob/: README  binomial.test.py  conjugate_priors.test.py  mh.test.py
falcon/fprob/fstat/: bernoulli.py  beta.py
falcon/functional/: functional.cc  functional.h
falcon/nn/: Conv.cc  Conv.h  Linear.cc  Linear.h
falcon/optim/: optim.cc  optim.h
falcon/stat/: README  binomial_test.py  distributions.py  utils.py
falcon/tensor/: Distributions.h  Tensor.cc  Tensor.h  tensor.cc  tensor.h
models/: mlp.py
models/transformers/: README  main.py
pythonbind/: CMakeLists.txt
test/: linear.cc  operations.cc  pytest.cc  rosenbrock_banana.cc  test_activations.py  test_autodiff.cc  test_autodiff.py  test_nn.py  test_optim.cc  test_tensor.cc
volgar/: common.py  op_type.py  ops.py  tensor.py
volgar/nn/: __init__.py  activations.py  conv2d.py  embedding.py  functional.py  linear.py
